--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    android:background="@color/white"
+    android:background="@drawable/fondocarritov1"
     tools:context=".Cart">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -63,7 +63,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginBottom="8dp"
-                android:backgroundTint="#F44336"
+                android:backgroundTint="#080033"
                 android:text="@string/place_Order"
                 app:cornerRadius="4dp"
                 app:shadowColor="@color/black"
