--- a/app/src/main/res/layout/activity_order_status.xml
+++ b/app/src/main/res/layout/activity_order_status.xml
@@ -9,8 +9,14 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listOrders"
-        android:background="@android:color/transparent"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
+        android:layout_width="412dp"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="0dp"
+        android:background="@android:color/transparent"></androidx.recyclerview.widget.RecyclerView>
 
 </RelativeLayout>
